k8s/manifests/broker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-message-broker
  labels:
    app.kubernetes.io/name: node-message-broker
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: flame
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: node-message-broker
      app.kubernetes.io/component: server
      app.kubernetes.io/part-of: flame
  template:
    metadata:
      labels:
        app.kubernetes.io/name: node-message-broker
        app.kubernetes.io/component: server
        app.kubernetes.io/part-of: flame
    spec:
      restartPolicy: "Always"
      containers:
        - name: node-message-broker
          image: docker.io/flame/node-message-broker:latest
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: "/tmp/private-key.pem"
              name: private-key-file
              subPath: node-private-key
              readOnly: true
            - mountPath: "/tmp/client-secret.txt"
              name: client-secret-file
              subPath: client-secret
              readOnly: true
          resources:
            requests:
              memory: "256Mi"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: "/health"
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 5
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: "/health"
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 10
      volumes:
        - name: private-key-file
          secret:
            secretName: node
            items:
              - key: node-private-key
                path: node-private-key
        - name: client-secret-file
          secret:
            secretName: hub-auth
            items:
              - key: client-secret
                path: client-secret
