k8s/manifests/broker-db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-message-broker-db
spec:
  selector:
    app.kubernetes.io/name: node-message-broker
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: flame
  ports:
    - port: 27017
      targetPort: 27017
