k8s/manifests/broker-service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-message-broker
spec:
  selector:
    app.kubernetes.io/name: node-message-broker
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: flame
  ports:
    - port: 80
      targetPort: 8080
