k8s/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-message-broker
  labels:
    app.kubernetes.io/name: node-message-broker
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: flame
spec:
  rules:
    - host: message-broker.<NODE_MESSAGE_BROKER_HOST>.nip.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: node-message-broker
                port:
                  number: 80
